Adicionado nas respostas os erros de autenticação
