# swagger/paths/entidades/get.yaml
@@ -50,5 +50,9 @@ parameters:
 responses:
   200:
     description: Lista todas as entidades
+  401:
+    $ref: '#/components/responses/UnauthorizedKey'
+  403:
+    $ref: '#/components/responses/PermissionsKey'
   500:
     description: Erro
